# dungeon-crawl

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
code/client/character/base/: BUILD  character_base.cpp  character_base.h
code/client/character/enemy/: BUILD  enemy_base.cpp  enemy_base.h
code/client/character/npc/: BUILD  npc_base.cpp  npc_base.h
code/client/character/player/: BUILD  player_base.cpp  player_base.h
code/client/character/player_ally/: BUILD  player_ally_base.cpp  player_ally_base.h
code/client/characters/base/: BUILD  character_base.cpp  character_base.h
code/client/controller/: BUILD  battle_coordinator.cpp  casting_director.cpp  casting_director.h  prop_manager.h  stage_manager.cpp  stage_manager.h
code/client/controllers/: BUILD  battle_coordinator.h  level_director.cpp  level_director.h  prop_manager.cpp
code/client/core/state_machine/: BUILD  state_machine.h
code/client/core/state_machine/test/: BUILD  state_machine_test.cpp
code/client/damage/proto/: BUILD  damage.proto
code/client/factory/: BUILD  character_factory.h
code/client/health/: BUILD  health_manager.cpp  health_manager.h
code/client/health/proto/: BUILD  heal.proto
code/client/messages/: BUILD  health_messages.h  status_messages.h
code/client/messages/proto/: BUILD  damage.proto  heal.proto
code/client/modules/: BUILD  module_factory.cpp  module_factory.h  module_registry.inl
code/client/modules/common/: BUILD  base_module.h  damage_type_module_common.cpp  damage_type_module_common.h  heal_type_module_common.cpp  heal_type_module_common.h  status_effect_module_common.cpp  status_effect_module_common.h
code/client/modules/common/test/: BUILD  damage_type_module_common_test.cpp  heal_type_module_common_test.cpp  status_effect_module_common_test.cpp
code/client/modules/common/test/data/: BUILD  test_damage_type_module_common.yaml  test_heal_type_module_common.yaml  test_status_effect_module_common.yaml
code/client/modules/damage/: BUILD  damage_module.h  damage_type_apply_module.cpp  damage_type_apply_module.h  status_effect_apply_module.cpp  status_effect_apply_module.h
code/client/modules/damage/test/: BUILD  damage_type_apply_module_test.cpp  status_effect_apply_module_test.cpp
code/client/modules/damage/test/data/: BUILD  test_damage_type_apply_module.yaml  test_status_effect_apply_module.yaml
code/client/modules/health/: BUILD  damage_type_resist_module.cpp  damage_type_resist_module.h  damage_type_resist_percent_module.cpp  damage_type_resist_percent_module.h  heal_type_increase_module.cpp  heal_type_increase_module.h  health_module.h  status_effect_immune_module.cpp  status_effect_immune_module.h
code/client/modules/health/test/: BUILD  damage_type_resist_module_test.cpp  damage_type_resist_percent_module_test.cpp  heal_type_increase_module_test.cpp  status_effect_immune_module_test.cpp
code/client/modules/health/test/data/: BUILD  test_damage_type_resist_module.yaml  test_heal_type_increase_module.yaml  test_status_effect_immune_module.yaml
code/client/modules/test/: BUILD  module_factory_test.cpp
code/client/modules/test/data/: BUILD  test_module_factory_data.yaml  test_status_effect_library_data.yaml
code/client/object/: BUILD  object_base.cpp  object_base.h  object_dynamic.cpp  object_dynamic.h  object_static.cpp  object_static.h
code/client/status_effect/: BUILD  base_status_effect.h  effect.cpp  effect.h  status_effect.cpp  status_effect.h  status_effect_library.cpp  status_effect_library.h  status_effect_manager.cpp  status_effect_manager.h
code/client/status_effect/test/: BUILD  effect_test.cpp  status_effect_library_test.cpp  status_effect_manager_test.cpp  status_effect_test.cpp  test_effect.cpp
code/client/status_effect/test/data/: BUILD  test_effect_data.yaml  test_status_effect_data.yaml  test_status_effect_library_data.yaml
code/core/: BUILD  log_manager.h  state_machine.h
code/core/message_system/: BUILD  message_dispatch.h  message_dispatch_base.h  message_pub_sub_base.h  message_publisher.h  message_subscriber.h  message_switchboard.h
code/core/message_system/test/: BUILD  message_dispatch_test.cpp  message_publisher_test.cpp  message_subscriber_test.cpp  message_switchboard_test.cpp  message_system_example_test.cpp  message_system_test.cpp
code/core/message_system/test/data/: BUILD  message_system_test.proto  message_test_data.h
code/core/message_system/test/example/: BUILD  actor_classes.cpp  actor_classes.h  message_types.h  simulation.h
code/core/state_machine/test/: BUILD  state_machine_test.cpp
code/core/test/: BUILD  log_manager_test.cpp  state_machine_test.cpp
code/data/status_effect/: status_effect_library.yaml
code/test/: BUILD  README.md  behaviorTreeCPP_test.cpp  boost_uuid_test.cpp  eigen_test.cpp  ogre_test.cpp  protobuf_test.cpp  py_navmesh_test.py  spdlog_test.cpp  yaml_cpp_test.cpp
code/test/test_data/: BUILD  generic_ports_BT.xml  navmesh_testdata.json  plugins.cfg  resources.cfg  simple_tree_BT.xml  test_data.proto  test_yaml.yaml
