module(name = "dungeon-crawl", version = "1.0")

bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_python", version = "1.8.5")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.14",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.14",
    requirements_lock = "//external/python:requirements.txt",
)

use_repo(pip, "pip")

# Choose the most recent version available at
# https://registry.bazel.build/modules/boost.uuid
bazel_dep(name = "boost.uuid", version = "1.89.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.17.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/eigen
bazel_dep(name = "eigen", version = "5.0.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "33.5")

# Choose the most recent version available at
# https://registry.bazel.build/modules/spdlog
bazel_dep(name = "spdlog", version = "1.17.0")

# Choose the most recent version available at
# https://registry.bazel.build/modules/yaml-cpp
bazel_dep(name = "yaml-cpp", version = "0.9.0")


new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")
new_local_repository(
    name = "ogre_sdk", 
    path = "C:\\OgreSDK", 
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_import")

cc_import(
    name = "ogre_main",
    shared_library = "bin/OgreMain.dll",
    interface_library = "lib/OgreMain.lib",
)
cc_import(
    name = "ogre_overlay",
    shared_library = "bin/OgreOverlay.dll",
    interface_library = "lib/OgreOverlay.lib",
)
cc_import(
    name = "ogre_rtShader",
    shared_library = "bin/OgreRTShaderSystem.dll",
    interface_library = "lib/OgreRTShaderSystem.lib",
)

cc_library(
    name = "ogre",
    hdrs = glob(["include/OGRE/**/*.h"]),
    deps = [
        ":ogre_main",
        ":ogre_overlay",
        ":ogre_rtShader",
    ],
    includes = ["include"],
    strip_include_prefix = "include/OGRE/",
    visibility = ["//visibility:public"],
)
""",
)

new_local_repository(
    name = "behaviortree_cpp", 
    path = "external\\behaviortree-cpp_x64-windows", 
    build_file_content = """
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_import")

cc_import(
    name = "behaviortree_cpp_libs",
    shared_library = "bin/behaviortree_cpp.dll",
    interface_library = "lib/behaviortree_cpp.lib",
)
cc_import(
    name = "minitrace",
    shared_library = "bin/minitrace.dll",
    interface_library = "lib/minitrace.lib",
)
cc_import(
    name = "tinyxml2",
    shared_library = "bin/tinyxml2.dll",
    interface_library = "lib/tinyxml2.lib",
)
cc_library(
    name = "bt_cpp",
    hdrs = glob(["include/behaviortree_cpp/**/*.h"]),
    deps = [
        ":behaviortree_cpp_libs",
        ":minitrace",
        ":tinyxml2",
    ],
    includes = ["include"],
    strip_include_prefix = "include/behaviortree_cpp/",
    visibility = ["//visibility:public"],
)
""",
)
